# Automation

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  __init__.py  conftest.py  pyproject.toml  requierments.txt  requirements.txt  requirments.txt  schema_construct.py  setup.py  test_setup_module.py
basic_helper/: object_description.py
clients/: Authentication.py  DBClient.py  RestClient.py  UIBasic.py  __init__.py  api_client.py  db_client.py  metaclasses.py
clients/auth/: jwt_auth.py
configs/: __init__.py  paths.py  stand  stand1  stand2  tests.py
contract/: __init__.py  conftest.py
contract/auth/authentication/login_for_auth/: base.schema.json  test_login_for_auth.py
fixtures/: configs.py
helpers/: models.py
pytemplate/: .gitignore  __init__.py  initialize.py
pytemplate/basic_helper/: object_description.py  project_urls.py
pytest-template/: requirements.txt
pytest-template/fixtures/: configs.py
server/: Dockerfile
src/: logger.py
test_data/: __init__.py  basic_enums.py  project_urls.py
tests/: functional_testing.py
ui_components/: ui_basic_methods.py
