[tool.poetry]
name = "pytest-template"
authors = ["Amaym0n"]
version = "1.1.0"
description = "Template for Autotests core"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
allure-pytest = "^2.13.2"
allure-python-commons = "^2.13.2"
annotated-types = "^0.6.0"
anyio = "^4.0.0"
attrs = "^23.1.0"
certifi = "^2023.7.22"
h11 = "^0.14.0"
httpcore = "^1.0.2"
httpx = "^0.25.1"
httpx-auth = "^0.18.0"
idna = "^3.4"
iniconfig = "^2.0.0"
packaging = "^23.2"
pluggy = "^1.3.0"
psycopg = { extras = ["binary"], version = "^3.1.12" }
pydantic = "^2.5.0"
pydantic-core = "^2.14.1"
pytest = "^7.4.3"
sniffio = "^1.3.0"
typing-extensions = "^4.8.0"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
